@@ -27,5 +27,6 @@ Gem::Specification.new do |s|
   s.add_dependency('ice_nine', '~> 0.11') # Deep Freeze Ruby Objects
   s.add_dependency('rails', '>= 7.2.0')
   s.add_dependency('request_store', '~> 1.3')
+  s.add_dependency('method_source', '~> 1.1')
   s.metadata['rubygems_mfa_required'] = 'true'
 end
