@@ -213,8 +213,8 @@ module ActiveScaffold
           if column.search_sql.present?
             select_options.concat(ActiveScaffold::Finder::STRING_COMPARATORS.collect { |title, comp| [as_(title), comp] })
           end
-          if ActiveScaffold::Finder::LOGICAL_COMPARATORS.present? && column.logical_search.present?
-            select_options.concat(ActiveScaffold::Finder::LOGICAL_COMPARATORS.collect { |comp| [as_(comp.downcase.to_sym), comp] })
+          if ActiveScaffold::Finder.logical_comparators.present? && column.logical_search.present?
+            select_options.concat(ActiveScaffold::Finder.logical_comparators.collect { |comp| [as_(comp.downcase.to_sym), comp] })
           end
         end
         if column.search_sql.present?
